SUBDIRS = src


# Targets inherited from the original Makefile
testing:
	make -C src -f Makefile.manual $@

lines:
	make -C src -f Makefile.manual $@

count:
	make -C src -f Makefile.manual $@

aurlocal:
	make -C src -f Makefile.manual $@

aur:
	make -C src -f Makefile.manual $@

cleanaur:
	make -C src -f Makefile.manual $@
